--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Flipbook Interaktif - Final</title>
+  <title>Flipbook Interaktif — Final (Password + Fingerprint + 10 Pages)</title>
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
   <style>
     :root{
-      --cream-a:#fbf5ec;
-      --cream-b:#f3eadc;
-      --accent:#c69c71;
-      --muted:#4b3d33;
-      --popup-radius:16px;
+      --cream-a:#fbf5ec; --cream-b:#f3eadc; --accent:#c69c71; --muted:#4b3d33; --popup-radius:16px;
     }
     *{box-sizing:border-box}
     html,body{height:100%;margin:0;font-family:'Poppins',system-ui,Arial;background:linear-gradient(180deg,var(--cream-a),var(--cream-b));color:var(--muted)}
@@ -47,19 +43,13 @@
     .finger-area{display:flex;align-items:center;flex-direction:column;gap:12px}
     .finger-btn{width:92px;height:92px;border-radius:50%;background:linear-gradient(180deg,rgba(0,0,0,0.06),rgba(0,0,0,0.03));display:flex;align-items:center;justify-content:center;cursor:pointer;font-size:34px}
     .finger-progress{width:86px;height:8px;background:rgba(0,0,0,0.06);border-radius:20px;overflow:hidden}
-    .finger-progress>i{display:block;height:100%;width:0%;background:linear-gradient(90deg,#d2ad88,#b78c6b);}
-
-    /* gift png */
-    .gift-wrap{display:flex;align-items:center;justify-content:center}
-    .gift-png{width:260px;height:auto;cursor:pointer;transition:transform .28s,opacity .4s}
-    .gift-float{animation:floatY 3s ease-in-out infinite}
-    @keyframes floatY{0%{transform:translateY(0)}50%{transform:translateY(-10px)}100%{transform:translateY(0)}}
+    .finger-progress>i{display:block;height:100%;width:0%;background:linear-gradient(90deg,#d2ad88,#b78c6b);transition:width .06s linear}
 
     /* flipbook (turn.js) styling */
-    #flipbook{width:720px;height:520px;margin:0 auto}
-    #flipbook .page{background:#fbf7f1;border:1px solid rgba(0,0,0,0.06);box-shadow:0 8px 30px rgba(0,0,0,0.12);overflow:hidden}
+    #flipbook{width:760px;height:540px;margin:0 auto;visibility:hidden;opacity:0;transition:opacity .5s}
+    #flipbook .page{background:#fbf7f1;border:1px solid rgba(0,0,0,0.06);box-shadow:0 8px 30px rgba(0,0,0,0.12);overflow:hidden;display:flex;align-items:center;justify-content:center}
     .cover{background:linear-gradient(180deg,#5d3b2a,#70462e);color:#fff;display:flex;align-items:center;justify-content:center;font-weight:800;font-size:28px}
-    .inner{background:linear-gradient(180deg,#fbf9f5,#fbf3ea);padding:36px;font-size:20px;line-height:1.6;color:var(--muted)}
+    .inner{background:linear-gradient(180deg,#fbf9f5,#fbf3ea);padding:36px;font-size:20px;line-height:1.6;color:var(--muted);width:100%;height:100%;display:flex;align-items:center;justify-content:center}
 
     /* controls */
     .controls{position:fixed;right:18px;bottom:18px;display:flex;gap:8px;z-index:120}
@@ -68,28 +58,19 @@
     .music{position:fixed;left:14px;bottom:14px;background:linear-gradient(180deg,rgba(255,255,255,0.96),rgba(250,245,238,0.96));padding:10px 14px;border-radius:14px;box-shadow:0 12px 36px rgba(0,0,0,0.12);display:flex;gap:10px;align-items:center;z-index:120}
     .music input[type=range]{width:160px}
 
-    /* responsive tweaks */
-    @media (max-width:900px){
-      #flipbook{width:86vw;height:56vw}
-      .gift-png{width:200px}
-      .modal{min-width:300px}
-    }
+    @media (max-width:900px){ #flipbook{width:86vw;height:56vw} .modal{min-width:300px} }
   </style>
 </head>
 <body>
   <div class="stage" id="stage">
-    <!-- Balloon placeholders -->
+    <!-- balloons -->
     <img id="balloon1" class="balloon x1" src="" alt="b1">
     <img id="balloon2" class="balloon x2" src="" alt="b2">
     <img id="balloon3" class="balloon x3" src="" alt="b3">
     <img id="balloon4" class="balloon x4" src="" alt="b4">
 
     <div id="center" style="z-index:20;display:flex;flex-direction:column;align-items:center;gap:18px">
-      <div id="giftArea" class="gift-wrap" style="display:none">
-        <img id="giftImg" class="gift-png gift-float" src="" alt="gift">
-      </div>
-
-      <div id="bookArea" style="display:none">
+      <div id="bookArea">
         <div id="flipbook"></div>
       </div>
     </div>
@@ -105,7 +86,7 @@
   <!-- Modals -->
   <div id="pwdModal" class="modal show">
     <h3>Masukkan sandi</h3>
-    <p>Masukkan kata sandi untuk membuka hadiah.</p>
+    <p>Masukkan kata sandi untuk membuka.</p>
     <input id="pwdInput" type="password" placeholder="ketik sandi">
     <div class="buttons"><button id="pwdNext" class="btn">Next</button></div>
   </div>
@@ -118,7 +99,7 @@
 
   <div id="fingerModal" class="modal">
     <h3>Verifikasi Sidik Jari</h3>
-    <p>Tahan tombol sidik jari selama beberapa detik untuk melanjutkan.</p>
+    <p>Tahan tombol sidik jari beberapa detik untuk melanjutkan.</p>
     <div class="finger-area"><div class="finger-btn" id="fingerBtn">🔒</div><div class="finger-progress"><i id="fingerFill"></i></div></div>
   </div>
 
@@ -139,163 +120,173 @@
 
   <script>
     /* ===== EDITABLE VARIABLES =====
-       Ganti path/URL dengan raw.githubusercontent.com jika file di repo.
+       Ganti asset URL/path di bawah.
     */
     const PASSWORD = 'arjingga25';
     const MUSIC_LABEL = 'Sempurna (ganti)';
-    const MUSIC_SRC = ''; // contoh: 'assets/music.mp3' atau raw github url
-    const BG_IMAGE = ''; // jika mau gambar background (else gradient)
-    const BALLOONS = ['','','','']; // isi 4 gambar balon jika punya
-    const GIFT_PNG = ''; // URL PNG transparan kotak hadiah (required untuk look)
-    const GIF_SRC = ''; // gif for after book
-    const VIDEO_SRC = ''; // mp4 or webm for after gif
-
+    const MUSIC_SRC = '';   // your music (mp3)
+    const BG_IMAGE = '';    // optional background image url
+    const BALLOONS = ['','','','']; // optional balloon images
+    const GIF_SRC = '';     // optional gif after book
+    const VIDEO_SRC = '';   // optional video url (mp4/webm)
     const PAGES = [
-      'Halaman 1 — ganti teks di sini',
-      'Halaman 2 — ganti teks di sini',
-      'Halaman 3 — ganti teks di sini',
-      'Halaman 4 — ganti teks di sini',
-      'Halaman 5 — ganti teks di sini',
-      'Halaman 6 — ganti teks di sini',
-      'Halaman 7 — ganti teks di sini',
-      'Halaman 8 — ganti teks di sini',
-      'Halaman 9 — ganti teks di sini',
-      'Halaman 10 — ganti teks di sini'
+      'Halaman 1 — Hai, ini halaman pertama 💌',
+      'Halaman 2 — Makasih udah buka buku ini 🤍',
+      'Halaman 3 — Setiap lembar punya arti sendiri...',
+      'Halaman 4 — Cerita kecil yang aku tulis buat kamu 🌷',
+      'Halaman 5 — Jangan lupa senyum hari ini ya 😚',
+      'Halaman 6 — Kadang hal sederhana bisa bikin bahagia ✨',
+      'Halaman 7 — Aku cuma mau bilang makasih ❤️',
+      'Halaman 8 — Kamu istimewa, tau? 💞',
+      'Halaman 9 — Sedikit lagi sampai akhir...',
+      'Halaman 10 — Terima kasih udah baca sampai sini 🫶'
     ];
-    const END_TEXT = 'Ganti teks penutup di script';
+    const END_TEXT = 'Terima kasih — ganti teks di script';
     /* ===== END EDITABLE ===== */
 
-    // apply labels and assets
+    // apply assets & labels
     document.getElementById('musicLabel').textContent = MUSIC_LABEL;
     if(MUSIC_SRC) document.getElementById('bgMusic').src = MUSIC_SRC;
     if(GIF_SRC) document.getElementById('gifImg').src = GIF_SRC;
     if(VIDEO_SRC) document.getElementById('floatVideo').src = VIDEO_SRC;
-    if(GIFT_PNG) document.getElementById('giftImg').src = GIFT_PNG;
     if(BG_IMAGE && BG_IMAGE.trim()!=='') document.getElementById('stage').style.backgroundImage = `url('${BG_IMAGE}')`;
-    BALLOONS.forEach((s,i)=>{const el=document.getElementById('balloon'+(i+1)); if(el){ el.src = s || ''; if(!s) el.style.opacity=0.03 }});
+    BALLOONS.forEach((s,i)=>{ const el=document.getElementById('balloon'+(i+1)); if(el){ el.src = s || ''; if(!s) el.style.opacity=0.03 } });
     document.getElementById('endText').textContent = END_TEXT;
 
-    // modal helpers
-    function show(id){document.getElementById(id).classList.add('show')}
-    function hide(id){document.getElementById(id).classList.remove('show')}
+    // helper show/hide
+    function show(id){ document.getElementById(id).classList.add('show'); }
+    function hide(id){ document.getElementById(id).classList.remove('show'); }
 
-    // Password flow
+    // PASSWORD logic (unchanged)
     const pwdInput = document.getElementById('pwdInput');
     document.getElementById('pwdNext').addEventListener('click', checkPwd);
     pwdInput.addEventListener('keydown',(e)=>{ if(e.key==='Enter') checkPwd(); });
     function checkPwd(){
       if(pwdInput.value === PASSWORD){
         hide('pwdModal');
-        setTimeout(()=>show('fingerModal'),280);
+        setTimeout(()=> show('fingerModal'), 260);
       } else {
         hide('pwdModal');
         show('pwdWrong');
       }
     }
-    document.getElementById('pwdRetry').addEventListener('click',()=>{ hide('pwdWrong'); show('pwdModal'); pwdInput.value=''; pwdInput.focus(); });
+    document.getElementById('pwdRetry').addEventListener('click', ()=>{ hide('pwdWrong'); show('pwdModal'); pwdInput.value=''; pwdInput.focus(); });
 
-    // Fingerprint hold
-    const fingerBtn = document.getElementById('fingerBtn'); const fingerFill = document.getElementById('fingerFill');
+    // Fingerprint hold (unchanged)
+    const fingerBtn = document.getElementById('fingerBtn');
+    const fingerFill = document.getElementById('fingerFill');
     let fillInt=null, fill=0;
-    function fingerStart(){ fill=0; fingerFill.style.width='0%'; fillInt=setInterval(()=>{ fill+=4; fingerFill.style.width = fill+'%'; if(fill>=100){ fingerComplete(); } },90);}
+    function fingerStart(){ fill=0; fingerFill.style.width='0%'; fillInt=setInterval(()=>{ fill+=4; fingerFill.style.width = fill+'%'; if(fill>=100){ fingerComplete(); } },90); }
     function fingerStop(){ clearInterval(fillInt); fingerFill.style.width='0%'; }
-    function fingerComplete(){ clearInterval(fillInt); fingerFill.style.width='100%'; hide('fingerModal'); setTimeout(()=>{ showGift(); },350); }
-    fingerBtn.addEventListener('mousedown',fingerStart); fingerBtn.addEventListener('touchstart',fingerStart);
-    document.addEventListener('mouseup',fingerStop); document.addEventListener('touchend',fingerStop);
+    function fingerComplete(){
+      clearInterval(fillInt); fingerFill.style.width='100%';
+      hide('fingerModal');
+      // directly show flipbook
+      setTimeout(()=> showFlipbook(), 350);
+    }
+    fingerBtn.addEventListener('mousedown', fingerStart);
+    fingerBtn.addEventListener('touchstart', fingerStart);
+    document.addEventListener('mouseup', fingerStop);
+    document.addEventListener('touchend', fingerStop);
 
-    // Show gift floating and enable click
-    const giftArea = document.getElementById('giftArea'); const giftImg = document.getElementById('giftImg');
-    function showGift(){
-      giftArea.style.display='flex';
-      giftImg.classList.add('gift-float');
-      giftImg.style.opacity='0'; giftImg.style.transform='translateY(20px) scale(.98)';
-      setTimeout(()=>{ giftImg.style.transition='opacity .5s,transform .6s'; giftImg.style.opacity='1'; giftImg.style.transform='translateY(0) scale(1)'; },50);
-      giftImg.addEventListener('click', openGiftOnce);
+    // show flipbook
+    function showFlipbook(){
+      initFlipbook();
+      const fb = document.getElementById('flipbook');
+      fb.style.visibility = 'visible';
+      fb.style.opacity = '1';
+      document.getElementById('nextBtn').style.display = 'inline-block';
+      document.getElementById('prevBtn').style.display = 'inline-block';
     }
 
-    function openGiftOnce(){
-      giftImg.removeEventListener('click',openGiftOnce);
-      // small open animation (fade up)
-      giftImg.classList.remove('gift-float');
-      giftImg.style.transition='transform .6s,opacity .5s';
-      giftImg.style.transform='translateY(-40px) scale(.9) rotateX(6deg)';
-      giftImg.style.opacity='0';
-      setTimeout(()=>{ giftArea.style.display='none'; initBook(); },600);
-    }
-
-    // Initialize Turn.js flipbook
-    function initBook(){
-      const fb = document.getElementById('flipbook'); fb.innerHTML='';
-      // cover front
-      const coverFront = document.createElement('div'); coverFront.className='page cover'; coverFront.innerHTML='<div style="padding:30px;font-size:28px;color:#fff">Cover Depan</div>';
-      fb.appendChild(coverFront);
-      // inner pages
-      PAGES.forEach((t,i)=>{ const pg=document.createElement('div'); pg.className='page inner'; pg.innerHTML=`<div style="padding:28px">${t}</div>`; fb.appendChild(pg); });
-      // cover back
-      const coverBack = document.createElement('div'); coverBack.className='page cover'; coverBack.innerHTML='<div style="padding:30px;font-size:22px;color:#fff">Cover Belakang</div>';
-      fb.appendChild(coverBack);
+    // initialize flipbook with covers + 10 pages
+    function initFlipbook(){
+      const fb = document.getElementById('flipbook'); fb.innerHTML = '';
+      // front cover
+      const cf = document.createElement('div'); cf.className='page cover'; cf.innerHTML = '<div style="padding:20px;font-size:26px;color:#fff">📖 Cover Depan</div>';
+      fb.appendChild(cf);
+      // 10 pages
+      for(let i=0;i<10;i++){
+        const pg = document.createElement('div'); pg.className='page inner';
+        pg.innerHTML = `<div class="inner" data-page="${i+1}">${PAGES[i] || ''}</div>`;
+        fb.appendChild(pg);
+      }
+      // back cover
+      const cb = document.createElement('div'); cb.className='page cover'; cb.innerHTML = '<div style="padding:20px;font-size:22px;color:#fff">📖 Cover Belakang</div>';
+      fb.appendChild(cb);
 
       // initialize turn.js
-      $('#flipbook').turn({width:720,height:520,autoCenter:true,display:'double'});
-      document.getElementById('bookArea').style.display='block';
-      document.getElementById('nextBtn').style.display='inline-block'; document.getElementById('prevBtn').style.display='inline-block';
+      try {
+        $('#flipbook').turn({width:760,height:540,autoCenter:true,display:'double'});
+      } catch(e){
+        console.error('turn.js init error', e);
+      }
 
-      // user controls (click zone: right side next, left side prev)
+      // click zone: left/right
       const bookElem = document.getElementById('flipbook');
-      bookElem.addEventListener('click',(e)=>{
-        const rect = bookElem.getBoundingClientRect(); const x = e.clientX - rect.left;
+      bookElem.addEventListener('click',(ev)=>{
+        const rect = bookElem.getBoundingClientRect();
+        const x = ev.clientX - rect.left;
         if(x > rect.width/2) $('#flipbook').turn('next'); else $('#flipbook').turn('previous');
       });
 
-      document.getElementById('nextBtn').addEventListener('click',()=>{ $('#flipbook').turn('next'); });
-      document.getElementById('prevBtn').addEventListener('click',()=>{ $('#flipbook').turn('previous'); });
+      // next/prev controls
+      document.getElementById('nextBtn').onclick = ()=>{ try{ $('#flipbook').turn('next'); }catch(e){} };
+      document.getElementById('prevBtn').onclick = ()=>{ try{ $('#flipbook').turn('previous'); }catch(e){} };
 
-      // detect last page turned
+      // when reaching end (before back cover) -> proceed
       $('#flipbook').bind('turned', function(e, page, view){
         const total = $('#flipbook').turn('pages');
         if(page >= total-1){
-          // after small delay close book
           setTimeout(()=>{
             // fade out book then proceed
-            document.getElementById('bookArea').style.opacity='0';
-            setTimeout(()=>{
-              document.getElementById('bookArea').style.display='none';
-              document.getElementById('bookArea').style.opacity='1';
-              proceedAfterBook();
-            },700);
+            const bookArea = document.getElementById('flipbook');
+            bookArea.style.opacity = '0';
+            setTimeout(()=>{ bookArea.style.display = 'none'; proceedAfterBook(); },700);
           },700);
         }
       });
     }
 
+    // after book finished -> GIF -> video -> end modal
     function proceedAfterBook(){
-      // show gif for a moment -> then video -> then end modal
-      show('gifModal');
-      setTimeout(()=>{ hide('gifModal'); setTimeout(()=>{ show('videoModal'); // if video provided, wait onended
-        const v = document.getElementById('floatVideo');
-        if(v && v.src && v.src.trim()!==''){
-          v.play().catch(()=>{}); // try play
-          v.onended = ()=>{ hide('videoModal'); setTimeout(()=>{ show('endModal'); },300); };
-        } else {
-          // no video provided: proceed to end after 2.2s
-          setTimeout(()=>{ hide('videoModal'); setTimeout(()=>{ show('endModal'); },300); },2200);
-        }
-      },400); },2400);
+      if(GIF_SRC && GIF_SRC.trim()!=='') show('gifModal');
+      setTimeout(()=>{
+        if(GIF_SRC && GIF_SRC.trim()!=='') hide('gifModal');
+        setTimeout(()=>{
+          show('videoModal');
+          const v = document.getElementById('floatVideo');
+          if(VIDEO_SRC && VIDEO_SRC.trim()!==''){
+            v.play().catch(()=>{});
+            v.onended = ()=>{ hide('videoModal'); setTimeout(()=> show('endModal'), 300); };
+          } else {
+            setTimeout(()=>{ hide('videoModal'); setTimeout(()=> show('endModal'), 300); },1800);
+          }
+        },300);
+      }, (GIF_SRC && GIF_SRC.trim()!=='')? 2000 : 400);
     }
 
     document.getElementById('endClose').addEventListener('click', ()=>{ hide('endModal'); });
 
-    // music controls
-    const audio = document.getElementById('bgMusic'); const playBtn = document.getElementById('playBtn'); const vol = document.getElementById('vol');
-    playBtn.addEventListener('click', ()=>{ if(audio.paused){ audio.play().catch(()=>{}); playBtn.textContent='Pause'; } else { audio.pause(); playBtn.textContent='Play'; } });
-    vol.addEventListener('input',(e)=>{ audio.volume = e.target.value; }); audio.volume = vol.value;
+    // music
+    const audio = document.getElementById('bgMusic');
+    const playBtn = document.getElementById('playBtn');
+    const vol = document.getElementById('vol');
+    playBtn.addEventListener('click', ()=>{
+      if(!audio) return;
+      if(audio.paused){ audio.play().catch(()=>{}); playBtn.textContent='Pause'; } else { audio.pause(); playBtn.textContent='Play'; }
+    });
+    vol.addEventListener('input',(e)=>{ if(audio) audio.volume = e.target.value; });
+    if(audio) audio.volume = vol.value;
+
+    // keyboard navigation
+    document.addEventListener('keydown',(e)=>{
+      try{ if(e.key==='ArrowRight') $('#flipbook').turn('next'); if(e.key==='ArrowLeft') $('#flipbook').turn('previous'); }catch(err){}
+      if(e.key==='Escape'){ const modals=document.querySelectorAll('.modal.show'); if(modals.length) modals.forEach(m=>m.classList.remove('show')); }
+    });
 
     // initial focus
-    setTimeout(()=>{ const pi=document.getElementById('pwdInput'); if(pi) pi.focus(); },300);
-
-    // accessibility: keyboard arrows for flip
-    document.addEventListener('keydown',(e)=>{ if(e.key==='ArrowRight') $('#flipbook').turn('next'); if(e.key==='ArrowLeft') $('#flipbook').turn('previous'); if(e.key==='Escape'){ const modals = document.querySelectorAll('.modal.show'); if(modals.length) modals.forEach(m=>m.classList.remove('show')); } });
-
+    setTimeout(()=>{ try{ document.getElementById('pwdInput').focus(); }catch(e){} },300);
   </script>
 </body>
 </html>
